# construct-app

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  KNOWLEDGE.md  LICENSE  README.md
.claude/agents/: rust-engineer.md
.github/workflows/: release.yml  update-homebrew.yml
.serena/: project.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-12-20-data-layer/: spec.md  tasks.md
agent-os/specs/2025-12-21-core-domain-types/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-22-note-service-implementation/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-23-cli-add-command/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-23-cli-list-command/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-24-architecture-validation/: spec.md  tasks.md
agent-os/specs/2025-12-24-auto-tagger-prompt-engineering/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-24-cli-auto-tagging-integration/: orchestration.yml  spec.md  (+1 more)
src/: autotagger.rs  db.rs  doctor.rs  enhancer.rs  hierarchy.rs  lib.rs  main.rs  models.rs  ollama.rs  service.rs  spreading_activation.rs  utils.rs
src/answerer/: mod.rs  query_answerer.rs  types.rs
src/autotagger/: eval.rs  normalizer.rs  tagger.rs
src/db/: migration.rs  mod.rs  schema.rs  tests.rs
src/hierarchy/: suggester.rs
src/models/: alias_info.rs  ids.rs  mod.rs  note.rs  tag.rs  tag_assignment.rs  tag_source.rs
src/ollama/: client.rs
src/service/: tests.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: acceptance_criteria_validation.rs  architecture_validation.rs  autotagger_evaluation.rs  cli_add_integration.rs  cli_list_integration.rs  cli_search_integration.rs  cli_tag_alias_integration.rs  cli_tui_command_tests.rs  dependencies_verification.rs  enhancer_integration.rs  ollama_integration.rs
tests/fixtures/: auto_tagger_corpus.json
(+93 files in other folders)
