[package]
name = "cons"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
time = { version = "0.3", features = ["serde", "serde-human-readable", "macros", "formatting"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "time"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["rt", "time", "macros"] }
