[package]
name = "cons"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
time = { version = "0.3", features = ["serde", "serde-human-readable", "macros", "formatting"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
thiserror = "1.0"
dotenvy = "0.15"
ratatui = "0.30"
crossterm = "0.28"
tui-markdown = "0.3.7"
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["rt", "time", "macros"] }
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
